gci: complete teleporter shortest path revision